data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4166.wast
;; 5. **Test Description**:    Table Index Parameter Underflow:    - Constraint: Ensure proper handling of operand stack underflow due to missing index operand inside a loop.    - Test Behavior: Design a loop where `call_indirect` misses the i32 index operand, leading to operand underflow and preventing an infinite loop.

(assert_invalid
  (module
    (type (func))
    (table 1 funcref)
    (func $test (loop $loop (call_indirect (type 0) (br $loop))))
  )
  "type mismatch"
)